Fixed the previous button text sticking out on windows

--- a/src/components/App/App.scss
+++ b/src/components/App/App.scss
@@ -79,7 +79,7 @@
       background-color: #fff;
       border: 1px solid #000;
       height: 20px;
-      width: 100px;
+      width: 110px;
       &:hover {
         cursor: pointer;
       }
